--- a/index.css
+++ b/index.css
@@ -43,7 +43,36 @@ main{
     box-sizing: border-box;
     padding: 20px;
     max-width: 430px;
+    height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.box-calculator--green{
+    background: var(--very-dark-cyan);
+    border-radius: 20px;
+    padding: 35px;
+   
+    
+}
+.result{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.description p:nth-child(1){
+    color: var(--white);
+    font-weight: 700;
+}
+.description p:nth-child(2){
+    color: var(--grayish-cyan);
+}
+.amount p{
+    color: var(--strong-cyan);
+    font-size: 40px;
+    font-weight: 700;
+    text-align: end;
 }
 .bill p {
     color: var(--grayish-cyan);
@@ -97,13 +126,26 @@ main{
     font-family: 'Space Mono', monospace;
     font-size: 22px;
     cursor: pointer;
-    color: var(--white);
+    
     text-align: center;
+    font-weight: 700;
 }
 
 .btn--green{
     background-color: var(--very-dark-cyan);
     text-align: center;
+    color: var(--white);
+}
+.btn--green-light{
+    background-color: var(--strong-cyan);
+    color: var(--very-dark-cyan);
+
+} 
+
+.btn--green:hover{
+
+    
+
 }
 .input-tip {
     cursor: pointer;
